@@ -1,4 +1,5 @@
 - move jquery-ui images to app/assets for rails 4.2 compatibility
+- clean css so no need to reverse links on nested
 
 = 3.4.29
 - fix for search_ui :multi_select on non-association column and non integer options
